<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopFragment">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/rock_paper_scissors"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1"/>

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/by_travis_viall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle"
        app:layout_constraintVertical_weight="1"/>

    <TextView
        android:id="@+id/my_pick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/my_pick"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintVertical_weight="1"/>

    <Button
        android:id="@+id/btn_rock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="10sp"
        android:text="@string/rock"
        app:layout_constraintStart_toEndOf="@+id/my_pick"
        app:layout_constraintTop_toTopOf="@+id/my_pick" />

    <Button
        android:id="@+id/btn_paper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="10sp"
        android:text="@string/paper"
        app:layout_constraintStart_toEndOf="@+id/btn_rock"
        app:layout_constraintTop_toTopOf="@+id/btn_rock" />

    <Button
        android:id="@+id/btn_scissors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="10sp"
        android:text="@string/scissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_paper"
        app:layout_constraintTop_toTopOf="@+id/btn_paper" />

    <TextView
        android:id="@+id/phone_pick_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/phone_pick_is"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/phone_pick_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_paper"
        app:layout_constraintVertical_weight="1"/>

    <TextView
        android:id="@+id/phone_pick_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        android:text="@string/phone_pick"
        android:textColor="#f242f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phone_pick_text"
        app:layout_constraintTop_toTopOf="@+id/phone_pick_text" />

    <TextView
        android:id="@+id/game_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/game_result_field"
        android:textSize="24sp"
        android:textColor="#f242f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_pick_value" />

</androidx.constraintlayout.widget.ConstraintLayout>